# epsagon-python

./: .gitignore  .pylint  .pylintrc  .releaserc  .travis.yml  AUTHORS  ChangeLog  LICENSE  MANIFEST.in  README.md  TODO.txt  bors.toml  epsagon.py  events.py  package-lock.json  package.json  patch_botocore.py  patch_requests.py  patcher.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
acceptance/: acceptance.py  run.sh
acceptance/lambda-handlers/: handler.py  requirements.txt  runtime_conf.yml  serverless.yml
epsagon/: __init__.py  __main__.py  cacert.pem  common.py  constants.py  db_utils.py  epsagon.py  event.py  events.py  handler.py  http_filters.py  patch_botocore.py  patch_requests.py  patcher.py  trace.py  trace_encoder.py  trace_transports.py  utils.py  wrapper.py
epsagon/events/: azure.py  botocore.py  celery.py  dbapi.py  greengrasssdk.py  grpc.py  httplib2.py  kafka.py  pymongo.py  pynamodb.py  pyqldb.py  qcloud_cos.py  redis.py  requests.py  sqlalchemy.py  tornado_client.py  (+2 more)
examples/: aws_lambda.py  custom_labels.py  custom_logs.py  custom_python.py  fastapi_example.py  flask.py  flask_app.py  google_function.py  simple.py  tornado.py
layer/: publish_layer.sh
scripts/: publish.sh  publish_layer.sh  publish_package.py  run_acceptance_tests.sh  run_lint.sh  run_tests.sh  semantic_release.sh  set_version.py
tests/: conftest.py  modules_tests.py  test_base.py  test_epsagon_init.py  test_event.py  test_logging.py  test_modules.py  test_patcher.py  test_trace.py  test_transports.py  test_utils.py
(+90 files in other folders)
