[aliases]
test=pytest

[flake8]
max-line-length = 80

[metadata]
name = epsagon
author = Epsagon
author-email = dev@epsagon.com
summary = Epsagon's Python instrumentation library
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://epsagon.com
project_urls =
    Documentation = https://docs.epsagon.com
    Source Code = https://github.com/epsagon/epsagon-python
license = MIT
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    serverless
    epsagon
    tracing
    distributed-tracing
    lambda
    aws-lambda
    debugging
    monitoring

[files]
packages =
    epsagon
